@@ -1,3 +1,7 @@
+1 March 2010: Wouter
+	- make install depends on make all.
+	- Fix 5011 auto-trust-anchor-file initial read to skip RRSIGs.
+
 26 February 2010: Wouter
 	- Fixup prototype for lexer cleanup in daemon code.
 	- unbound-control list_stubs, list_forwards, list_local_zones and
